Data Analyst - RELX Careers. Job Application for Senior Data Analyst - Lifecycle Marketing at FreshBooks. Data Analyst - Cover - Career Page. IT Data Analyst & Reporting Manager CMDB & SI Tools - Nokia Careers. Senior Data Analyst - RELX Careers. Data Analyst - LexisNexis Risk Solutions  - Cardiff - RELX Careers. The Climate Corporation Careers - Intern: Data Analyst (Summer 2020).     Data Analyst PL at EBANX .     Data Analyst at Wingify Software Pvt. Ltd. . Data Modeling Analyst - NetImpact Strategies - Career Page. Publicis Groupe Data Analyst | SmartRecruiters. Upside - Data Science Business Analyst. Data Science Analyst - Simpletire - Career Page. Rate Data Analyst job with Glatfelter Insurance Group | 6409357. bowmo - Data Analyst (CRM). Medidata Solutions Careers - Data Intelligence Analyst. Medidata Solutions Careers - Data Intelligence Analyst. ChowNow  - Data Analyst, Revenue Operations. Job @ Onedot (Schlieren): Data Analyst Intern | JOIN. Medidata Solutions Careers - Data Intelligence Analyst. Benefitfocus Careers - Data Analyst II. Job Application for Manager of Data Analysis at Summit Public Schools (SPS). Trainee Data Analyst - Lewisham Jobs Careers. Data Analyst | Current Openings. Job Application for Sr. Data Analyst at States Title. Data Analyst Real-World Evidence (m/f/d) | Fresenius Medical Care Deutschland GmbH | Job. Shore Consulting Senior Business Data Analyst (Health Sector Experience/QA experience) | SmartRecruiters. Job Application for Data Analyst at MealPal. Clinical Data Analyst - Adventist Health Careers. Senior Survey Statistician - Fors Marsh Group - Career Page. Falcon.io - R&D Data Analyst. Job Application for Network Operations Center (NOC) Customer Data Analyst at Bandwidth. Desmos - Data Analyst. Job Application for Data Analyst  at eSolutions, Inc.. Zeta Global Careers - Data Analyst - Reporting and Visualization. Umdasch Group Senior Data Analyst (m/w/d) | SmartRecruiters. Bosch Group Data Analyst | SmartRecruiters. Job Appli

--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,6 +71,10 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-26873'>Data Analyst - RELX Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/freshbooks/jobs/1940807'>Job Application for Senior Data Analyst - Lifecycle Marketing at FreshBooks</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -87,7 +91,7 @@
 <p><span class="badge badge-light">United States  Portland, OR</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-lexisnexis-risk-solutions-cardiff-27560'>Data Analyst - LexisNexis Risk Solutions  - Cardiff - RELX Careers</a></h5> 
+<h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-lexisnexis-risk-solutions-cardiff-27560'>Data Analyst - LexisNexis Risk Solutions  - Cardiff - RELX Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -127,7 +131,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bowmo/a412380a-c3d8-4cfd-be8b-6a9f33c6da48'>bowmo - Data Analyst (CRM)</a></h5> 
+<h5><a href='https://jobs.lever.co/bowmo/a412380a-c3d8-4cfd-be8b-6a9f33c6da48'>bowmo - Data Analyst (CRM)</a></h5> 
 <p><span class="badge badge-light">Brooklyn, NY</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -151,7 +155,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o88pbfwA&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nhv0oMwr'>Benefitfocus Careers - Data Analyst II</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o88pbfwA&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nhv0oMwr'>Benefitfocus Careers - Data Analyst II</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -227,7 +231,7 @@
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ironcladts/430ed39b-425f-4d74-b326-6077344de6c7'>Ironclad Technology Services - Oracle Database Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/ironcladts/430ed39b-425f-4d74-b326-6077344de6c7'>Ironclad Technology Services - Oracle Database Analyst</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -271,7 +275,7 @@
 <p><span class="badge badge-light">Pleasanton, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://aberdeen.applytojob.com/apply/rw2Vxx93cC/Data-Analyst'>Data Analyst - Aberdeen - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://aberdeen.applytojob.com/apply/rw2Vxx93cC/Data-Analyst'>Data Analyst - Aberdeen - Career Page</a></h5> 
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -295,7 +299,7 @@
 <p><span class="badge badge-light">New York, NY New York, NY</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.hbs.edu/recruiting/data/Pages/default.aspx?sf111482827=1'>
+<h5><a href='https://www.hbs.edu/recruiting/data/Pages/default.aspx?sf111482827=1'>
 	MBA Student Data &amp; Statistics - Recruiting - Harvard Business School
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -343,7 +347,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698364649-business-data-analyst-level-4'>Visa Business/Data Analyst - Level 4 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698364649-business-data-analyst-level-4'>Visa Business/Data Analyst - Level 4 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -359,7 +363,7 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westernun.referrals.selectminds.com/jobs/senior-data-analyst-21049'>Senior Data Analyst - Western Union Careers</a></h5> 
+<h5><a href='https://westernun.referrals.selectminds.com/jobs/senior-data-analyst-21049'>Senior Data Analyst - Western Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -391,7 +395,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/grandrounds/f946e5df-56fb-4852-9fea-f09563e9879c'>Grand Rounds - Experienced Healthcare Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/grandrounds/f946e5df-56fb-4852-9fea-f09563e9879c'>Grand Rounds - Experienced Healthcare Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -435,7 +439,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://hitchcock.referrals.selectminds.com/jobs/healthcare-data-analyst-value-reporting-analytics-ft-days-6815'>Healthcare Data Analyst-Value Reporting & Analytics (FT), Days - Dartmouth-Hitchcock Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hitchcock.referrals.selectminds.com/jobs/healthcare-data-analyst-value-reporting-analytics-ft-days-6815'>Healthcare Data Analyst-Value Reporting & Analytics (FT), Days - Dartmouth-Hitchcock Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -482,10 +486,6 @@
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=ocmjbfwM&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nBYIlMwT&jvi=ocmjbfwM,Job&jvk=Job'>Medidata Solutions Careers - Senior Sales Operations System Analyst</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/questbridge/jobs/4435765002'>Job Application for Data Analyst, Data Science & Analytics at QuestBridge</a></h5> 
-<p><span class="badge badge-light">Palo Alto</span></p>
-<p>Posted on: 2019-10-28</p>
 <hr/>
 
 
