Ubisoft Junior Data Scientist (M/F) | SmartRecruiters. Freedom Financial Network Careers - Contractor-Data Scientist. Data Scientist - Automotives | Averity. Bosch Group BCAI_Data Scientist | SmartRecruiters. SQL System Engineer | PROSTAFF – Swiss IT and Data Science Recruitment &amp; HR-Services. Senior Data Scientist - Akamai Careers. Job @ SO1 (Berlin): (Senior) Data Scientist (m/f/x) | JOIN. Data Scientist - NetImpact Strategies - Career Page. Data Science Sol Consultant - Anthem, Inc. Careers.       Data Scientist NLP (F/M/DIV) - Scorable     . Bosch Group Data Scientist – Deep Learning | SmartRecruiters. Upside - Data Science Business Analyst. Freedom Financial Network Careers - Senior Data Scientist. Data Science Analyst - Simpletire - Career Page. Guidewire Software, Inc. Careers - Data Scientist, Cyence - Chennai, India. ST - BAC+5 - Ingénieur Data science: détection d'anomalies dans les données de véhicules électrique connectés F/H - Carrières chez Groupe RENAULT. Job Application for Data Scientist at SimilarWeb. Dathena - Data Scientist (Bangkok). Aroghia Group Sr. Big Data Developer /w Data Science for Leading Global Sportswear Co. -- W2 only, no C2C! | SmartRecruiters. Job @ Lana Labs (Berlin): Teamlead Data Science & ... | JOIN. Lyra Health - Data Scientist - Clinical and Product.       Customer Facing Data Scientist - Corti     . Data Scientist. Data Scientist, Senior. Data Scientist: Natural Language Processing (NLP). thredUP - Data Scientist - Marketplace. Job Description - Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service (19001B4Y) Senior Software Development Engineer - Machine Learning - OCI Data Science Cloud Service 19001B4Y - The Machine Learning Conference. Data Science Engineer  with ref. 30272 - NES Global Talent. Kaleidoscope Careers - Data Scientist. Job Application for Data Scientist at ShopStyle. Head of Data Science Job. Head of Data Science job. Jobs on Jobsearch.ie. Data Science Lead. Publicis G

--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,10 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698578064-junior-data-scientist-m-f-'>Ubisoft Junior Data Scientist (M/F) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">France</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ok3Oafw5&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nY8qpMwc'>Freedom Financial Network Careers - Contractor-Data Scientist</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
@@ -141,7 +145,7 @@
 <p><span class="badge badge-light">Bangkok Bangkok Bangkok</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698531141-sr-big-data-developer-w-data-science-for-leading-global-sportswear-co-w2-only-no-c2c-'>Aroghia Group Sr. Big Data Developer /w Data Science for Leading Global Sportswear Co. -- W2 only, no C2C! | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698531141-sr-big-data-developer-w-data-science-for-leading-global-sportswear-co-w2-only-no-c2c-'>Aroghia Group Sr. Big Data Developer /w Data Science for Leading Global Sportswear Co. -- W2 only, no C2C! | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hillsboro, OR, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -250,7 +254,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/howden/49615867-9155-474e-9931-bde2b08f8057'>Howden - Software & Data Science Engineer - Digital Solutions</a></h5> 
+<h5><a href='https://jobs.lever.co/howden/49615867-9155-474e-9931-bde2b08f8057'>Howden - Software & Data Science Engineer - Digital Solutions</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -274,7 +278,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://benefits-data-trust.breezy.hr/p/a9f451590314-director-of-data-science'>Director of Data Science at Benefits Data Trust</a></h5> 
+<h5><a href='https://benefits-data-trust.breezy.hr/p/a9f451590314-director-of-data-science'>Director of Data Science at Benefits Data Trust</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -421,7 +425,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=989&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=69c7f557-de71-4a89-bcc3-b2f9de190d1f'>Data Science Lead</a></h5> 
+<h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=989&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=69c7f557-de71-4a89-bcc3-b2f9de190d1f'>Data Science Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -457,7 +461,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1933907'>Job Application for Data Scientist  at Cardlytics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1933907'>Job Application for Data Scientist  at Cardlytics</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -480,12 +484,6 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698229097-senior-data-scientist'>4Catalyzer Senior Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://uchicago.wd5.myworkdayjobs.com/en-US/External/job/5235-S-Harper-Court/Senior-Data-Scientist-2_JR06852'>Senior Data Scientist-2</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 17, 2019 ... Conducts data investigation, including data wrangling, cleaning, sampling, 
-management, exploratory analysis, regression and classification, prediction, and 
-data?...</p>
 <hr/>
 
 
